src/objects/Test_Log__c.object
<CustomObject>
    <fields>
        <fullName>Corresponding_Bug_Enhancement_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corresponding Bug/Enhancement Request</label>
        <referenceTo>Release_Task__c</referenceTo>
        <relationshipLabel>Test Log</relationshipLabel>
        <relationshipName>Test_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Tested__c</fullName>
        <label>Date Tested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Profile_Tested__c</fullName>
        <label>Profile Tested</label>
        <picklist>
            <picklistValues>
                <fullName>Profile 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Plan_Tested__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Plan Tested</label>
        <referenceTo>Test_Plan__c</referenceTo>
        <relationshipLabel>Test Log</relationshipLabel>
        <relationshipName>Test_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Script_Tested__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Script Tested</label>
        <referenceTo>Test_Scripts__c</referenceTo>
        <relationshipLabel>Test Log</relationshipLabel>
        <relationshipName>Test_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fail_rate__c</fullName>
        <formula>IF( ISPICKVAL( Status__c ,&quot;Fail&quot;) ,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fail rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Test Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Corresponding_Bug_Enhancement_Request__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TLog-{0}</displayFormat>
        <label>Test Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>